Added check for already installed